[gd_scene load_steps=16 format=3 uid="uid://cmyfqcxgphxpn"]

[ext_resource type="Script" path="res://scripts/screens/gameover_screen.gd" id="1_xm1rg"]
[ext_resource type="Texture2D" uid="uid://ufjapcbwnc3x" path="res://textures/gameover_screen.png" id="2_2br2m"]
[ext_resource type="Texture2D" uid="uid://gwvu12nymdqu" path="res://sprites/replay_normal.svg" id="3_08gan"]
[ext_resource type="Texture2D" uid="uid://qs5k7h2g58nl" path="res://sprites/replay_.pressed.svg" id="4_jtfbv"]
[ext_resource type="Texture2D" uid="uid://cor05yu61qgiu" path="res://sprites/settings_normal.svg" id="6_4as3s"]
[ext_resource type="Texture2D" uid="uid://cbcd06yw21b8o" path="res://sprites/settings_pressed.svg" id="7_14baa"]
[ext_resource type="Texture2D" uid="uid://d1rq20h3u2hkn" path="res://sprites/daiy_challenge_normal.svg" id="8_xxfkj"]
[ext_resource type="Texture2D" uid="uid://dutg5ljj3iwwg" path="res://sprites/daiy_challenge_pressed.svg" id="9_8pdgd"]
[ext_resource type="Texture2D" uid="uid://di8mxbus2tkth" path="res://sprites/leaderboards_normal.svg" id="10_y6fe8"]
[ext_resource type="Texture2D" uid="uid://oyp0gomc7d4e" path="res://sprites/leaderboards_pressed.svg" id="11_dom6p"]
[ext_resource type="PackedScene" uid="uid://dm8iwlkcr6evi" path="res://scenes/screens/daily_challenges_screen.tscn" id="12_r5tog"]
[ext_resource type="Texture2D" uid="uid://jply5cctoa1g" path="res://sprites/icon_coin.png" id="13_g1iiq"]
[ext_resource type="PackedScene" uid="uid://dnytylsauc6g4" path="res://scenes/screens/settings_screen.tscn" id="13_i6ear"]

[sub_resource type="LabelSettings" id="LabelSettings_a303q"]
font_size = 40
outline_size = 4
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4.94, 4.065)

[sub_resource type="LabelSettings" id="LabelSettings_qanye"]
font_size = 33
outline_size = 4
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4.94, 4.065)

[node name="GameoverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xm1rg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -768.0
offset_top = -1368.0
offset_right = 768.0
offset_bottom = 1320.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.395, 0.395)
pivot_offset = Vector2(767.73, 1386.19)
texture = ExtResource("2_2br2m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.372549)

[node name="Header" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -170.0
offset_right = 182.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderMedium"
theme_override_constants/line_spacing = -5
text = "The Desert 
Swallowed You!"
horizontal_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -93.0
offset_right = 138.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "Score: 00:00"
label_settings = SubResource("LabelSettings_a303q")
horizontal_alignment = 1

[node name="Coins" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -35.0
offset_right = 156.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderMedium"
text = "0"
label_settings = SubResource("LabelSettings_qanye")
horizontal_alignment = 1

[node name="CoinIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -28.0
offset_right = -4.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_g1iiq")

[node name="ReplayButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 61.5
offset_right = 60.0
offset_bottom = 178.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(62.0513, 58.2308)
size_flags_vertical = 3
texture_normal = ExtResource("3_08gan")
texture_pressed = ExtResource("4_jtfbv")

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -74.9999
offset_bottom = 6.10352e-05
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("6_4as3s")
texture_pressed = ExtResource("7_14baa")

[node name="DailyChallengseButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -147.0
offset_bottom = -72.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("8_xxfkj")
texture_pressed = ExtResource("9_8pdgd")

[node name="LeaderBoardsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -74.9999
offset_right = 96.0
offset_bottom = 6.10352e-05
grow_horizontal = 0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("10_y6fe8")
texture_pressed = ExtResource("11_dom6p")

[node name="InputBlocker" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DailyChallengesScreen" parent="." instance=ExtResource("12_r5tog")]
visible = false
layout_mode = 1

[node name="SettingsScreen" parent="." instance=ExtResource("13_i6ear")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -300.0
offset_right = 240.0
offset_bottom = 300.0

[connection signal="pressed" from="ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="DailyChallengseButton" to="." method="_on_daily_challengse_button_pressed"]
[connection signal="pressed" from="LeaderBoardsButton" to="." method="_on_leader_boards_button_pressed"]
[connection signal="hidden" from="DailyChallengesScreen" to="." method="_on_popup_screen_hidden"]
[connection signal="hidden" from="SettingsScreen" to="." method="_on_popup_screen_hidden"]
